# django-admin-lazy-load

./: MANIFEST.in  README.md  setup.cfg
admin_lazy_load/: __init__.py
admin_lazy_load/static/js/: lazyload.js
admin_lazy_load/templates/: lazy_load_field.html
example_project/: admin_lazy_load  requirements.txt
example_project/app/: admin.py  models.py
example_project/app/migrations/: 0001_initial.py  0002_auto_20220701_1226.py
example_project/example_project/: settings.py
