[metadata]
name = django-admin-lazy-load
version = 0.1
description = Allows to speed-up loading of django admin page by loading heavy calculated field in lazy maner - via separate ajax requests.
long_description = file: README.rst
url = https://github.com/mihasK/django-admin-lazy-load
author = mihasK
license = GNU General Public License v3.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
[options]
include_package_data = true
packages = find:
